# agio

./: .gitignore  Agent Chat UI Design Draft.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONFIG_SPECS_REFACTOR.md  CONTRIBUTING.md  Claude Agent Skills_Progressive Disclosure Implementation.md  LICENSE  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_NEW.md  README_zh.md  REFACTOR_PROGRESS.md  REFACTOR_SESSION_CHAT.md  TODOs.md  citation_store_error_analysis.md  cleanup.sh  core_concepts_explained.md  debug_build.py  demo.py  demo_events.py  demo_prod.py  design_hitl.md  design_hitl_v2.md  main.py  plan.md  plans.md  pyproject.toml  refactor.md  refactor_core.md  refactor_file_structure.md  refactor_file_structure_supplement.md  refactor_support_agent_skills.md  requirements.txt  review_P0_CRITICAL.md  (+8 more)
.cleanup_backup_20251121_010307/: plans.md  test_error.txt  test_full_arch.py  test_new_arch.py  test_output.txt
.gemini/: audit_logging_migration.py  backend_errors_fix.md  di_refactoring_summary.md  error_handling_logging_summary.md  logging_migration_status.md  mongodb_persistence_fix.md  mongodb_repository_summary.md
agio/: __init__.py  agent.py  cli.py  config.py  main.py
agio-frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
configs/: README.md
docs/: AGENT_RUN_LOOP_HOOKS.md  AGENT_SYSTEM.md  API_CONTROL_PANEL.md  API_REDESIGN_SPEC.md  ARCHITECTURE.md  CLEANUP_REVIEW.md  CODING_STANDARDS.md  CONFIG_COLD_START_SUMMARY.md  CONFIG_SYSTEM.md  CONFIG_SYSTEM_V2.md  DEEPRESEARCH_AGENT_GUIDE.md  DYNAMIC_CONFIG_ARCHITECTURE.md  DYNAMIC_CONFIG_DESIGN.md  LOGGING.md  MULTI_AGENT_DESIGN.md  OBSERVABILITY.md  OBSERVABILITY_DESIGN.md  OPTIMIZATION_CIRCULAR_DEPENDENCY.md  OPTIMIZATION_CONFIG_SYS.md  OTLP_SETUP.md  README.md  REFACTORING_PHASE1.md  REFACTORING_PHASE2.md  REFACTORING_PHASE3.md  REFACTORING_PHASE4.md  REFACTORING_PLAN.md  REFACTOR_EXECUTION_PLAN.md  REMOVAL_CHECKLIST.md  RUNNABLE_PROTOCOL.md  STEP_INTEGRATION_GUIDE.md  STEP_QUICK_REFERENCE.md  TEMPLATE_VARIABLE_RESEARCH.md  (+19 more)
(+666 files in other folders)
