[project]
name = "agio"
version = "0.1.0"
description = "Modern AI Agent Framework - A composable, multi-agent orchestration framework with event streaming, tool system, observability, and configuration-driven capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agio Contributors"}
]
keywords = ["ai", "agent", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "httpx[socks]>=0.25.0",
    "openai>=2.8.1",
    "anthropic>=0.74.1",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "chromadb>=1.3.5",
    "pydantic-settings>=2.12.0",
    "motor>=3.7.1",
    "structlog>=24.1.0",
    "beautifulsoup4>=4.14.3",
    "trafilatura>=2.0.0",
    "playwright>=1.56.0",
    "curl-cffi>=0.13.0",
    "jinja2>=3.1.6",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
agio-server = "agio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agio"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
